# Hasher

./: CMakeLists.txt  README.md
src/: hasher.cpp  hasher.h  main.cpp
src/algorithms/: blake3.cpp  sha.cpp  xxhash.cpp
src/output/: formatter.cpp  formatter.h
